--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ subjects:
 - !lcsh 'France -- History -- Revolution, 1789-1799 -- Fiction'
 - !lcc 'PR'
 - !lcsh 'Historical fiction'
+- GITenberg
 title: The Red Cockade
 url: http://www.gutenberg.org/ebooks/39297
